--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ https://templatemo.com/tm-528-elegance
     <link rel="stylesheet" href="css/responsive.css">
 
     </head>
-    
+
     <body>
     
     <div id="video">
@@ -276,13 +276,15 @@ https://templatemo.com/tm-528-elegance
                             </div>
                             <div class="gallery-section">
                                 <div class="gallery-list owl-carousel">
-                                    <div class="item animate" data-animate="fadeInUp">
+                                    <div class="item animate" data-animate="fadeInUp" id="klasifikasi">
                                         <div class="portfolio-item">
                                             <div class="thumb">
                                                 <img src="images/klasifikasi2.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Klasifikasi PMB STIESIA</h4>
+                                                <h4>
+                                                    <a href="https://klasifikasi.snakeyes.my.id" style="color:#7700ff;" target="_blank">
+                                                        Klasifikasi PMB STIESIA</a></h4>
                                                 <p>Aplikasi klasifikasi pengunduran diri calon mahasiswa baru STIESIA Surabaya.</p>
                                             </div>
                                         </div>
@@ -293,7 +295,9 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/Puskom.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Akses and Monitoring Web</h4>
+                                                <h4>
+                                                    <a href="https://puskom.stiesia.ac.id" style="color:#7700ff;" target="_blank">
+                                                    Akses and Monitoring Web</a></h4>
                                                 <p>Aplikasi akses dan monitoring pembayaran 
                                                     STIESIA Surabaya.</p>
                                             </div>
@@ -305,7 +309,10 @@ https://templatemo.com/tm-528-elegance
                                                 <img src="images/Puskom.png" alt="">
                                             </div>
                                             <div class="thumb-inner animate" data-animate="fadeInUp">
-                                                <h4>Gym Web</h4>
+                                                <h4>
+                                                    <a href="https://gym.snakeyes.my.id" style="color:#7700ff;" target="_blank">
+                                                    Gym Web</a>
+                                                </h4>
                                                 <p>Website landing page Gym Company.</p>
                                             </div>
                                         </div>
@@ -523,6 +530,6 @@ https://templatemo.com/tm-528-elegance
 
     <script src="js/custom.js"></script>
 
-
   </body>
+
 </html>
